[package]
name = "rust-xmss-time"
version = "0.1.0"
edition = "2024"

[dependencies]
leansig = { git = "https://github.com/leanEthereum/leanSig.git", branch = "devnet4" }

backend = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "2eb4b9d983171139af36749f127dd9890c9109e6" }
rec_aggregation = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "2eb4b9d983171139af36749f127dd9890c9109e6" }

rand = "0.10.0"
